Added the doctor validations

--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/isacciobota/Ambulance-Uber#readme",
   "dependencies": {
+    "@hapi/joi": "^17.1.1",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
