--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "expo-app-loading": "~1.3.0",
     "expo-asset": "~8.4.6",
     "expo-status-bar": "~1.2.0",
+    "jwt-decode": "^3.1.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
