--- a/client/package.json
+++ b/client/package.json
@@ -40,6 +40,7 @@
     "react-native-vector-icons": "^9.1.0",
     "react-native-view-overflow": "^0.0.5",
     "react-native-web": "0.17.1",
+    "socket.io-client": "^4.5.1",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
